# ComputationalPhysics

./: .gitignore  4Auswertung.ipynb  CMakeLists.txt  STUDENTS.txt  requirements.txt
(1)/: Makefile  main.cpp
(1)/src/: GenerateRandom.h  PlotHistogram.cpp
0/: Makefile  main  main.cpp
0/src/: subclass.cpp  subclass.h
1/: main
1 - Estimate of PI/: Notebook.ipynb
1/src/: GenerateRandom.cpp  PlotHistogram.h
2 - Simple Sampling Experiments/: Auswertung.ipynb  CMakeLists.txt  Lennart.ipynb  Makefile  main
2 - Simple Sampling Experiments/src/: main.cpp
3-Generating Functions, Central Limit Theorem etc/: Auswertung.ipynb
4 - The Ising Model in 1D/: CMakeLists.txt  Lennart.ipynb  Notebook.ipynb  ising_1d
4 - The Ising Model in 1D/includes/: experiment.h  lattice.h  lattice_1d.h  lattice_measurement.h  lattice_result.h  lattice_scaling_result.h  measurement.h  metropolis_result.h  utils.h
4 - The Ising Model in 1D/src/: lattice.cpp  lattice_1d.cpp  lattice_measurement.cpp  lattice_result.cpp  lattice_scaling_result.cpp  main.cpp  metropolis_result.cpp  utils.cpp
5 - The Ising Model in 2D/: CMakeLists.txt  Notebook.ipynb  ising_2d
5 - The Ising Model in 2D/includes/: exact_result.h
5 - The Ising Model in 2D/src/: main.cpp
6 - Critical Slowing Down/: CMakeLists.txt  Notebook.ipynb
6 - Critical Slowing Down/src/: main.cpp
Common/: CMakeLists.txt
Common/includes/: lattice.h  lattice_1d.h  lattice_2d.h  lattice_observable.h  utils.h
Common/src/: histogram.cpp  lattice.cpp  lattice_1d.cpp  lattice_2d.cpp  metropolis_result.cpp
Libraries/includes/: histogram.h
Libraries/src/: histogram.cxx
