CMAKE_MINIMUM_REQUIRED(VERSION 3.25)

PROJECT(ComputationPhysics)
PROJECT(ComputationPhysics LANGUAGES CXX)

IF (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
    SET(HOMEBREW_PREFIX "/usr/local" CACHE PATH "Path to Homebrew installation")
    SET(CMAKE_C_COMPILER "${HOMEBREW_PREFIX}/bin/gcc-14")
    SET(CMAKE_CXX_COMPILER "${HOMEBREW_PREFIX}/bin/g++-14")
ENDIF()

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(TBB REQUIRED)

ADD_SUBDIRECTORY("Common")
ADD_SUBDIRECTORY("4 - The Ising Model in 1D")
ADD_SUBDIRECTORY("5 - The Ising Model in 2D")
